--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ body {
 }
 
 h1 {
-	font-size: 72pt;
+	font-size: 82pt;
 }
 
 p {
@@ -31,9 +31,9 @@ a {
 #sections {
 	display: flex;
 	justify-content: space-around;
-	max-width: 70%;
-	margin: auto;
 }
+
+#title { justify-content: center; }
 
 #math, #books { color: #EABF52; }
 
@@ -46,20 +46,19 @@ a {
 #RANDOM-FOREST-HOME { padding: 1em; }
 
 #canvas {
-	position: absolute;
-	display: block;
-	top: 0;
-	left: 0;
-	z-index: -1;
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
 
 .book_list { margin-left: 2em; }
 
-.heading { text-align: center; }
-
 .link { color: #70A8DB; }
 
 .container {
-	width: 900px;
+	text-align: center;
+	max-width: 800px;
 	margin: auto;
 }
