--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,8 @@ a {
 #sections {
 	display: flex;
 	justify-content: space-around;
+	margin: auto;
+	width: 80%;
 }
 
 #math, #books { color: #EABF52; }
